FIX: z-index personal-info

--- a/src/app/modules/components/personal-info/personal-info.component.scss
+++ b/src/app/modules/components/personal-info/personal-info.component.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   width: max-content;
-  z-index: 2;
+  z-index: 9999;
   width: 50%;
   transition: all 300ms;
   .main-wrapped {
